test/langtools/tools/javac/SuperInit/EarlyAssignmentNoPreview2.out
EarlyAssignmentNoPreview2.java:12:14: compiler.err.preview.feature.disabled: (compiler.misc.feature.flexible.constructors)
1 error
